--- a/COGS108_Substances_Project.ipynb
+++ b/COGS108_Substances_Project.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import nilearn\n"
+    "import nilearn\n",
+    "#hi "
    ]
   }
  ],
