--- a/COGS108_Substances_Project.ipynb
+++ b/COGS108_Substances_Project.ipynb
@@ -10,6 +10,16 @@
     "import nilearn\n",
     "#hi "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nibabel as nib\n",
+    "from nilearn import plotting"
+   ]
   }
  ],
  "metadata": {
@@ -28,7 +38,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
