--- a/COGS108_Substances_Project.ipynb
+++ b/COGS108_Substances_Project.ipynb
@@ -76,6 +76,45 @@
     "# Display the DataFrame\n",
     "print(df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  participant_id  screen_bmi handedness        screen_race appt1_drugtest  \\\n",
+      "0       sub-1001   22.128772       Left  Two or more races       negative   \n",
+      "\n",
+      "   appt1_breathalyzer        age    sex  deception  screen_meds_pastmonth  \\\n",
+      "0                 0.0  19.294145  Woman         10                    1.0   \n",
+      "\n",
+      "   screen_meds_stabilizer  screen_meds_ssri  screen_meds_epilepsy  \\\n",
+      "0                     0.0               0.0                   0.0   \n",
+      "\n",
+      "   screen_meds_psychosis  screen_meds_antianxiety  screen_meds_pain  \n",
+      "0                    0.0                      0.0               0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "url = \"https://s3.amazonaws.com/openneuro.org/ds004920/participants.tsv?versionId=BdKmd_YFun33Dgx9_jFZLooJJ655dAhk\"\n",
+    "# Use pandas to read the TSV file directly from the URL\n",
+    "df = pd.read_csv(url, sep='\\t')\n",
+    "\n",
+    "\n",
+    "# Select the first two rows\n",
+    "df_first_participant= df.head(1)\n",
+    "\n",
+    "# Print the result\n",
+    "print(df_first_participant)"
+   ]
   }
  ],
  "metadata": {
@@ -94,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
